--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
+URL: https://github.com/mumbarkar/edapkg
+BugReports: https://github.com/mumbarkar/edapkg/issues
